# anno

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
lib/: CMakeLists.txt
res/: CMakeLists.txt  packer.cpp
res/shaders/ambient_light/: ambient_light.fs.sc  ambient_light.vs.sc
res/shaders/cube/: cube.fs.sc  cube.vs.sc  varying.def.sc
res/shaders/directional_light/: directional_light.fs.sc
res/shaders/light/: backup  light.fs.sc
res/shaders/model/: model.fs.sc  model.vs.sc  varying.def.sc
res/shaders/point_light/: point_light.fs.sc  varying.def.sc
res/shaders/upscale/: upscale.fs.sc
src/: game.cpp  game.hpp  main.cpp  main.hpp  state.cpp  state.hpp
src/camera/: camera.cpp  camera.hpp
src/components/: mesh_renderer.hpp  transform.hpp
src/core/: ecs.hpp  engine.hpp  global.cpp  global.hpp  object.hpp  transform.hpp
src/gfx/: framebuffer.cpp  framebuffer.hpp  mesh.cpp  mesh.hpp  primitive.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp  vertex.hpp
src/gfx/imgui/: README.md  fs_ocornut_imgui.bin.h  imgui_impl_bgfx.cpp  vs_ocornut_imgui.bin.h
src/gfx/shaders/: upscale.hpp
src/log/: log.cpp  log.hpp
src/maths/: maths.hpp
src/platform/: input.cpp  input.hpp  window.cpp  window.hpp
src/util/: constants.hpp
